--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 
     <title>Mortgage repayment calculator</title>
 
-    <link rel="icon" type="image/png" sizes="32x32" href="" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/images/favicon-32x32.png"
+    />
     <link href="./src/index.css" rel="stylesheet" />
   </head>
   <body>
